# ChangeLog for games-emulation/gnome-video-arcade
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jan 2011; Piotr Szymaniak <szarpaj@grubelek.pl>
  gnome-video-arcade-0.6.8.ebuild:
  Added missing IUSE flag.

*gnome-video-arcade-0.7.1 (08 Jun 2010)

  08 Jun 2010; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.7.1.ebuild:
  Bumped.

  15 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.6.5.ebuild, -gnome-video-arcade-0.6.7.ebuild:
  Removed cruft.

*gnome-video-arcade-0.7.0 (13 Mar 2010)

  13 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.7.0.ebuild:
  Bumped with updated deps and gstreamer flag.

  27 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.7.ebuild:
  Fixing thinko.

*gnome-video-arcade-0.6.8 (27 Jan 2010)

  27 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.5.ebuild, gnome-video-arcade-0.6.7.ebuild,
  +gnome-video-arcade-0.6.8.ebuild:
  Bumped. Seems like the gnome flag is useless if gtk is new enough, so
  dropping that in all versions which ignore it. Also made the ebuild a bit
  nicer.

  27 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.7.ebuild:
  Bumped. Updated homepage.

  10 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.5.ebuild:
  Added missing dep.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.6.3.ebuild, -gnome-video-arcade-0.6.4.ebuild,
  gnome-video-arcade-0.6.5.ebuild:
  Removed cruft. Fixed errors reported by repoman. Fixed inherit.

  14 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.5.ebuild:
  Bumped.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.3.ebuild, gnome-video-arcade-0.6.4.ebuild:
  Fixed as suggested by repoman.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.4.ebuild:
  Bumped.

  29 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.3.ebuild: