@@ -1,8 +1,8 @@
 DIST gnome-video-arcade-0.6.8.tar.bz2 1809528 RMD160 8fc76c46b6063cf236d030bbb106b90c6c515167 SHA1 c130681c638e72a36b1fbcbe382afc620fa7a741 SHA256 927d42df02728049d6cd7fa7f3efdd16d83e105c3e48abeda2d41d420546a53b
 DIST gnome-video-arcade-0.7.0.tar.bz2 2014260 RMD160 7e41954752fb45662bba9cbb614af3652e5270ac SHA1 65e9fdef883dd11b93f972e53078a78db3d23983 SHA256 0a29459662362bb5858fe97ccffc1ae21902c9a373581564fb8618284b02c844
 DIST gnome-video-arcade-0.7.1.tar.bz2 2005953 RMD160 e165ea88869fba01485c3c41c56a8c7d23be4c98 SHA1 aeaf800ca6807b5d5ba325e400833e6490e2cf01 SHA256 1d9009a051b1c0446eebf5a1e2f1c4c1e17f64d41b0f4526e4f1d741113468fb
-EBUILD gnome-video-arcade-0.6.8.ebuild 1175 RMD160 9e1cf3ba16f3db37d8b405e86178bc681ccc4477 SHA1 8116e59290d6ae38395e617ea795acd215bb6df7 SHA256 23cc8be899a040fc82954f0559f055932046f25e6cffef8b209b0fe6194a5a6c
-EBUILD gnome-video-arcade-0.7.0.ebuild 1192 RMD160 db5fdf3866f947836fdbcc33f01c10845c00f13b SHA1 f5cedf1f812fee1f042c9514cfa47e5142e3c9db SHA256 d17be373136f1c87e826abb6f31eb348867f78aad623202c44ee7d749dee5920
-EBUILD gnome-video-arcade-0.7.1.ebuild 1212 RMD160 d8aba9649308789253e8400ffe2c940e54f7d71e SHA1 de3cb1649f35c14eb8b2be471c7ebbab9df0521a SHA256 338d3b44975bb8176ef667c709993eaf1f4c6c87637a9fa99bebdc8d55740404
-MISC ChangeLog 2822 RMD160 e81f066329a46995b8a53523a822ea67e668ff8b SHA1 26da08ae66bcbe16700d2f92dc3df36d66082a29 SHA256 eda56c45a6bdd3c6b0201f034f86a1686b6816c0a01b3c53a3163690fc0e8dbf
+EBUILD gnome-video-arcade-0.6.8.ebuild 1187 RMD160 aabfbcd1c5108e30d9c18004aa745c1a8b797950 SHA1 043fd6b206e491985914fcdb64ff92d9a447113d SHA256 771a73299442ca34f3c2166f6b958dd36f9ef7d39a7433da78845e6aaba3c66f
+EBUILD gnome-video-arcade-0.7.0.ebuild 1202 RMD160 b544f205f94a5b46e6e6d44eafd931cc15d9ceb0 SHA1 6462eaffafca3acfe3665561bfc8ed348172a215 SHA256 bdb99bec639c57130e11183a0f779d810987c6cd47de4dd51c5b63eff9af6da5
+EBUILD gnome-video-arcade-0.7.1.ebuild 1222 RMD160 7c86418e415d1f957a2e69060b3f9f3e5bec7798 SHA1 f33b762c323833a0c7616ea577478f955926f53a SHA256 8f5c68d9adaa9ec8a201aff1c3b325cb2a8bc593e2e5bde9ab35ec68d7fb3f86
+MISC ChangeLog 2993 RMD160 84f25ba7c72e73ac390e0644a65150da91380203 SHA1 0dbc304ce42187918ae7a87ba181dcf6f0356398 SHA256 91e6457d0abfdd9e07c6560b6468e3d5a1e6ad6194c0964bab07bdcce4b27673
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
